fix layout bug

--- a/src/demo/css/demo.css
+++ b/src/demo/css/demo.css
@@ -13,3 +13,6 @@
     width: 550px; 
     height: 400px; 
 }
+.button-indent {
+    margin-left: 30px;
+}
